--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Med-MG/default-frontEnd.git"
   },
-  "author": "Mohamed Mouiguina, Abbassi Achraf",
+  "author": "Mohamed Mouiguina",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Med-MG/default-frontEnd.git/issues"
